@@ -1,3 +1,7 @@
+Thu Feb 17 04:25:02 2000  Tim Janik  <timj@gtk.org>
+
+	* glib.h: remove extraneous prototype for g_thread_init().
+
 Wed Feb 16 05:18:37 CST 2000  Shawn T. Amundson <amundson@gtk.org>
 
 	* Released GLib 1.2.7
